# rust-mcs-multi-binary

./: Cargo.toml  README.md
src/: utils.rs
src/aggregator/: aggregator.rs  main.rs
src/client/: client.rs  main.rs
